Fix list alignment.

--- a/2014_theme/sass/style.scss
+++ b/2014_theme/sass/style.scss
@@ -604,7 +604,7 @@ article {
         margin: {
             top: $fsp;
             bottom: $fsp;
-            left: $fs2;
+            left: $fs3;
         }
 
         + hr { margin-top: 1.4em; }
